[workspace]

resolver = "2"

members = [
#    "lig",
    "ligature",
#    "ligature-benchmark",
    "ligature-graph",
#    "ligature-http",
#    "ligature-in-memory",
#    "ligature-nushell",
#    "ligature-redb",
#    "ligature-repl",
#    "ligature-sqlite",
    "ligature-test-suite",
    "ligature-wasm",
    "tiny-dl",
    "trips",
    "wander",
    "wander-pad",
    "wander-repl",
]
