[package]
name = "lig"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A Rust implementation of the lig serialization format for Ligature."
repository = "https://github.com/almibe/ligature/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = "0.5" #{ path = "../ligature" }
gaze = "0.3" #{ path = "../../gaze" }
hex = "0.4"
lazy_static = "1.4"
