[package]
name = "lig"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A Rust implementation of the lig serialization format for Ligature."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
wander = { path = "../wander" }
gaze = "0.5"
lazy_static = "1.4"
logos = "0.13"
