[package]
name = "ligature-benchmark"
version = "0.1.0"
publish = true
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "An implementation of Ligature that uses persistant data structures to store Ligature's data model in memory."
repository = "https://github.com/almibe/ligature/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = "0.5"
