[package]
name = "ligature-in-memory"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "An implementation of Ligature that uses persistant data structures to store Ligature's data model in memory."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
wander = "0.5.0"
# rpds = "0.12"
# regex = "1"
# lazy_static = "1.4.0"
# serde = { version = "1.0", features = ["derive"] }
# bytes = "1"
# uuid = { version = "0.8", features = ["serde", "v4"] }
