[package]
name = "ligature-nushell"
version = "0.1.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A Nushell plugin for working with Ligature."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
lig = { path = "../lig" }
ligature-sqlite = { path = "../ligature-sqlite" }
wander = { path = "../wander" }
anyhow = "1.0"
nu-plugin = "0.84.0"
nu-protocol = "0.84.0"
