[package]
name = "ligature-repl"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A REPL for working with Ligature and Wander."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
lig = { path = "../lig" }
ligature-in-memory = { path = "../ligature-in-memory" }
ligature-redb = { path = "../ligature-redb" }
ligature-sqlite = { path = "../ligature-sqlite" }
wander = { path = "../wander" }
rustyline = "10.0.0"
anyhow = "1.0"
