[package]
name = "ligature-repl"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A REPL for working with Ligature and Wander."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
#lig = { path = "../lig" }
ligature-in-memory = { path = "../ligature-in-memory" }
#ligature-sqlite = { path = "../ligature-sqlite" }
wander = { path = "../wander" }
anyhow = "1.0"
rustyline = "12.0.0" #TODO: remove this once I've published wander-repl 0.6.0
zmq = "0.10.0"
