[package]
name = "ligature-sqlite"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "An implementation of Ligature that uses SQLite to store Ligature data."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
wander = { path = "../wander" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
