[package]
name = "ligature-zeromq"
version = "0.1.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A server for Ligature using ZeroMQ."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = { path = "../ligature" }
wander = { path = "../wander" }
ligature-graph = { path = "../ligature-graph" }
zmq = "0.10.0"
