[package]
name = "ligature"
version = "0.9.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Ligature's data model in Rust."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbag = "0.1.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
