[package]
name = "trips"
version = "0.2.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "trips is a simple generic triple store written in Rust."
repository = "https://github.com/almibe/ligature-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbag = "0.1.12"
redb = { version = "2.2.0", optional = true }

[features]
redb = ["dep:redb"]
