[package]
name = "wander-repl"
version = "0.6.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A REPL for working with Wander."
repository = "https://github.com/almibe/wander/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wander = { path = "../wander" }
rustyline = "12.0.0"
tabled = "0.14.0"
anyhow = "1.0"
