[package]
name = "wander-wasm"
description = "Wasm support for Wander."
version = "0.5.2"
publish = false
license = "MPL-2.0"
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
repository = "https://github.com/almibe/wander"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wander = "0.5.0" #{ path = "../wander" }
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
