[package]
name = "wander"
version = "0.1.0"
publish = true
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "The Wander scripting language."
repository = "https://github.com/almibe/ligature/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligature = "0.5" #{ path = "../ligature" }
lig = "0.1" #{ path = "../lig" }
gaze = "0.4"
