[package]
name = "wander"
version = "0.6.0"
publish = false
authors = ["Alex Michael Berry <alexmiberry@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "The Wander scripting language."
repository = "https://github.com/almibe/wander/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13"
gaze = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
rpds = "1.0.1"
lazy_static = "1.4.0"
regex = "1"
